# ceph_BK

./: CMakeLists.txt  README.md  README_EN.md  ceph-14.2.8-compaction.patch  ceph-14.2.8-ec_turbo-release.patch  ceph-14.2.8-ucx.patch  ceph-17.2.x-spdk.patch  ceph-17.2.x-ucx.patch  ceph-ecturbo-optimization.patch  ceph-spdk.spec  ceph.spec  ceph.spec.in  cephiostat.py
cmake/modules/: BuildDPDK.cmake  BuildSPDK.cmake  FindKpsBluestore.cmake
docs/en/: data_compaction_feature_guide.md  ec_turbo_feature_guide.md  ec_turbo_tuning_guide.md  rdma_network_acceleration_feature_guide.md  release_notes.md  spdk_io_acceleration_feature_guide.md
docs/zh/: data_compaction_feature_guide.md  ec_turbo_feature_guide.md  ec_turbo_tuning_guide.md  rdma_network_acceleration_feature_guide.md  release_notes.md  spdk_io_acceleration_feature_guide.md
patch/: 22.03_adaptation.patch
src/: CMakeLists.txt  ceph-osd-spdk.sh  create-osd.sh  delete-osd.sh  disable-spdk-conf.sh  enable-spdk-conf.sh  logrotate.conf
src/common/: CMakeLists.txt  Finisher.h  bit_str.h  crc32c_aarch64.c  legacy_config_opts.h  options.cc
src/compressor/: Compressor.h
src/compressor/zstd/: CMakeLists.txt  CompressionPluginZstd.h  ZstdCompressor.cc  ZstdCompressor.h
src/crush/: builder.c  crush_ln_table.h  hash.c  hash.h  mapper.c  mapper.h
src/erasure-code/: CMakeLists.txt  ErasureCode.cc  ErasureCode.h  ErasureCodeInterface.h
src/include/: config-h.in.cmake  mempool.h  rados.h  utime.h
src/librbd/: DeepCopyRequest.cc  ExclusiveLock.cc  ExclusiveLock.h  Journal.cc  Journal.h  ObjectMap.cc  ObjectMap.h  Operations.cc  Utils.h  internal.cc
src/mon/: PGMap.cc
src/msg/: CMakeLists.txt  Messenger.h
src/os/: CMakeLists.txt
systemd/: 50-ceph.preset  CMakeLists.txt  ceph-osd@.service.in  spdk-conf.service.in  spdk-conf.target
(+103 files in other folders)
